--- a/oauth2-server/src/views/partials/login-form.ejs
+++ b/oauth2-server/src/views/partials/login-form.ejs
@@ -24,6 +24,8 @@
     <input type="hidden" name="client_id" value="<%= client_id || '' %>">
     <input type="hidden" name="redirect_uri" value="<%= redirect_uri || '' %>">
     <input type="hidden" name="state" value="<%= state || '' %>">
+    <input type="hidden" name="response_type" value="<%= typeof response_type !== 'undefined' ? response_type : 'code' %>">
+    <input type="hidden" name="scope" value="<%= typeof scope !== 'undefined' ? scope : '' %>">
 
     <div class="form-group">
       <label for="username">Username</label>
